# ros_faster_rcnn

./: CMakeLists.txt  LICENSE  README.md  mainpage.dox  manifest.xml
script/: faster_rcnn_detection_service.py  faster_rcnn_tcp_server.py
src/: ObjectInfo.cpp  ObjectInfo.h  kcf_client.cpp  ros_faster_rcnn.cpp  runtracker.cpp
srv/: FasterRcnnDetection.srv  KcfTracker.srv
